--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "vishwajith-solutions-x-education",
-  "private": true,
-  "version": "0.0.0",
+  "name": "vishwajith-education",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,16 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.1",
-    "lucide-react": "^0.556.0",
-    "react": "^19.2.1",
-    "react-router-dom": "^7.10.1",
-    "firebase": "^12.6.0"
+    "firebase": "^10.8.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.2.0",
+    "vite": "^5.1.0"
   }
 }
